# crowdsky-client

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.md  background.md  conf.py  getting_started.md  index.md  rest_api.md  use_case.md
docs/examples/: crowdsky_47tuc_example.ipynb
src/crowdsky_client/: __init__.py  client.py  config.py
tests/: conftest.py  test_client.py
