[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crowdsky-client"
version = "0.1.0"
description = "Lightweight Python client for the CrowdSky data API (frame discovery + download)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at" },
]
keywords = ["astronomy", "seestar", "crowdsky", "healpix", "fits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
# Deliberately light: NO stacking-engine deps (opencv/astroalign/sep). A scientist
# pip-installs this on a laptop and on Zeus and gets identical behaviour.
dependencies = [
    "requests",
    "astropy",
    "astropy-healpix",
]

[project.urls]
Homepage = "https://crowdsky.univie.ac.at"
Documentation = "https://crowdsky-client.readthedocs.io"
Repository = "https://github.com/astronomyk/crowdsky-client"

[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "sphinx>=7",
    "furo",
    "myst-nb",
    "sphinx-copybutton",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crowdsky_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
